--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,5 +7,8 @@
     </li>
   <% end %>
 </ul>
+<br>
+<br>
+<%= link_to ">> Go to Tags List", tags_path %>
 
 <%= link_to "Create a New Article", new_article_path, class: "new_article" %>
