--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,6 +5,9 @@
     <%= link_to tag.name, tag_path(tag) %>
   <% end %>
 </p>
+<% if @article.image.exists? %>
+	<%= image_tag @article.image.url %><br/>
+<% end %>	
 <p><%= @article.body %></p>
 <br>
 <%= link_to "edit", edit_article_path(@article) %>
