--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,5 +10,9 @@
 <br>
 <br>
 <%= link_to ">> Go to Tags List", tags_path %>
+<br>
+<%= link_to ">> Go to Authors List", authors_path %>
 
+<% if logged_in? %>
 <%= link_to "Create a New Article", new_article_path, class: "new_article" %>
+<% end %>
