--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -10,11 +10,13 @@
 <% end %>	
 <p><%= @article.body %></p>
 <br>
+<% if logged_in? %>
 <%= link_to "edit", edit_article_path(@article) %>
 <br>
 <%= link_to "delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"}
  %>
  <br>
+ <% end %>
 <h3>Comments (<%= @article.comments.size %>)</h3>
 <%= render partial: 'articles/comment', collection: @article.comments %>
 <br>
