--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -4,9 +4,11 @@
   <% @tags.each do |tag| %>
     <li>
       <%= link_to tag.name, tag_path(tag) %>
-      <%= link_to 'Delete', tag_path(tag),
+      <% if logged_in? %>
+      	<%= link_to 'Delete', tag_path(tag),
               method: :delete,
               data: { confirm: 'Are you sure?' } %>	
+      <% end %>        
     </li>
   <% end %>
 </ul>
